--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "node-sass": "^4.10.0",
+    "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0",
     "uuid": "^3.3.2",
     "vue": "^2.5.2",
