--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
     "build": "node build/build.js",
-    "deploy": "npm run build; push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "./deploy.sh"
   },
   "dependencies": {
     "node-sass": "^4.10.0",
