--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "./deploy.sh"
   },
   "dependencies": {
+    "gsap": "^2.0.2",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "uuid": "^3.3.2",
