--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "deploy": "./deploy.sh"
   },
   "dependencies": {
+    "@mdi/font": "^3.0.39",
     "gsap": "^2.0.2",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "uuid": "^3.3.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.3.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
