--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Flying Carrot",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0",
     "start": "npm run dev",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
@@ -14,6 +14,7 @@
     "deploy": "./deploy.sh"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "@mdi/font": "^3.0.39",
     "gsap": "^2.0.2",
     "node-sass": "^4.10.0",
